# ai_photo_renamer

./: README.md  pyproject.toml
media_annotator/: __init__.py  cli.py  config.py  constants.py  logging.py
media_annotator/db/: dao.py  migrations.py  models.py  session.py
media_annotator/faces/: clustering.py  embedding.py  insightface_backend.py  video_sampling.py
media_annotator/llm/: base.py  lmstudio_backend.py  local_safetensors_backend.py  ollama_backend.py  prompting.py
media_annotator/metadata/: exiftool.py  ffprobe.py  location.py
media_annotator/pipeline/: apply_changes.py  cache.py  describe_media.py  preprocess_faces.py  rename_plan.py  runner.py
media_annotator/scan/: discover.py  media_info.py
media_annotator/sidecar/: writer.py
media_annotator/ui/: gui_app.py  main_window.py  models.py  workers.py
media_annotator/utils/: hashing.py  paths.py  slugify.py  subprocess.py  time.py
